fix(UI): Added gap behind body tag

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,9 @@
 
   SPDX-License-Identifier: EPL-2.0
   License-Filename: LICENSE
-*/ body {
+*/
+
+body {
     background-color: #fafafa;
     color: #272833;
     font-family:
